--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: Compoucher
 email: your-email@example.com
-environment: prod
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+environment : production
+JEKYLL_ENV : production
+description: "Compoucher, Zach McArtor silly digital products"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: http://compoucher.com
 production_url: http://compoucher.com
